--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -247,6 +247,7 @@
     "loading": "Loading...",
     "WelcomeDr": "Welcome, Dr.",
     "Notification": "Notification",
+    "notification": "Verification link was sent to your email",
     "LatestAppointments": " Latest Appointments",
     "LoadMore": "Load More",
     "Remote": "Remote",
